# wingpanel-indicator-ayatana

./: .editorconfig  .gitignore  .travis.yml  README.md  com.github.lafydev.wingpanel-indicator-ayatana_2.0ubuntu6_amd64.deb  meson.build
debian/: changelog  control  copyright  files
src/: AyatanaIndicator.vala  Indicator.vala  IndicatorButton.vala  config.vala.in
